--- a/nixpacks.toml
+++ b/nixpacks.toml
@@ -8,5 +8,5 @@ cmds = ["pip install -r requirements.txt"]
 cmds = ["echo 'Build complete'"]
 
 [start]
-cmd = "uvicorn main:app --host 0.0.0.0 --port $PORT"
+cmd = "python -c \"import os; port = int(os.getenv('PORT', '8000')); import uvicorn; uvicorn.run('main:app', host='0.0.0.0', port=port)\""
 
